update the usage of paths. and path